feat(android): conditional steps Phase A2 — IF interpreter + run view enrichment
Wires the V15 tree model into the run engine and exposes it on the
run-detail API.

AndroidConditionEvaluator:
- Per-run helper that reuses the same bridge + session + element
  catalog StepRunner already holds. element_state operators map onto
  StepAction equivalents so AssertionRunner does the actual semantic
  work — "is_visible" probes exactly the same way ASSERT_VISIBLE does,
  zero duplication of UIAutomator parsing.
- test_data_compare honours the run's environment override (same
  precedence rule as StepRunner.resolveValue).
- "exists" is the one operator that doesn't map cleanly (AssertionRunner
  has no opposite of ASSERT_NOT_PRESENT) so it's checked directly.

RunOrchestrator:
- New executeBlock(block, ...) recursively walks the step tree. Leaf
  steps go through the existing F6 StepExecutor SPI (preserving
  cancellation checks, screenshot-on-failure, adaptive wait + inter-
  step pacing). IF rows evaluate the condition, mark the IF row
  PASSED (or ERROR if the probe blew up), then recurse into the
  chosen branch only.
- Failure / cancel bubble up through the recursion via a small
  ExecBlockResult record (constants BLOCK_OK / BLOCK_FAILED /
  BLOCK_CANCELLED — static factories collided with the record's
  auto-generated accessors).
- After the walk completes, the orchestrator sweeps any placeholder
  still in PENDING to SKIPPED. This covers steps inside the
  unchosen branch — they were pre-populated as PENDING by
  prePopulateResults and the walker never touched them.
- Result rows are now looked up by stepId (Map<Long, StepResultEntity>)
  rather than by orderIndex, because tree positions don't share a
  single global ordering.

RunDtos + RunService:
- StepResultView gains parentStepId, branchLabel, condition.
- RunService.toView batch-fetches StepEntity by id and stamps tree
  metadata onto each result row. Same pattern as the Web stack.

Frontend is unchanged — the s